<resources>
    <string name="simui_intenet_call">Internet Call</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="Def_Settings_wifi_network_ssid" />
    <string name="Def_Settings_wifi_password" />
    <string name="audio_profile_settings_title">Audio profiles</string>
    <string name="custom_build_version">Custom Build Version</string>
    <string name="software_update">Software update service</string>
    <string name="software_updates_more_title">Software updates</string>
    <string name="software_updates_more_summary">Check new version software</string>
    <string name="landscape_launcher_title">Landscape Launcher</string>
    <string name="hdmi_settings">HDMI settings</string>
    <string name="hdmi_settings_summary">Click to configure HDMI</string>
    <string name="display_settings_scences_title">Scenes</string>
    <string name="mtk_thememanager_title">Theme</string>
    <string name="schedule_power_on_off_settings_title">Scheduled power on &amp; off</string>
    <string name="display_personalize">Personalize</string>
    <string name="display_default">Display</string>
    <string name="lock_screen_notifications_title">Lock screen notifications</string>
    <string name="lock_screen_notifications_summary">Show notifications on lock screen</string>
    <string name="lock_screen_style_title">Lock screen style</string>
    <string name="clear_motion_summary">Video fluency enhancer</string>
    <string name="clear_motion_title">ClearMotionTM</string>
    <string name="audioshare_title">Audio share</string>
    <string name="adupsfota_software_update_string_ext">Wireless update</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS&amp;NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="biometric_weak_improve_matching_title">Improve face matching</string>
    <string name="biometric_weak_liveliness_title">Liveness check</string>
    <string name="biometric_weak_liveliness_summary">Require eye blink while unlocking</string>
    <string name="lock_after_timeout">Automatically lock</string>
    <string name="lock_after_timeout_summary">%1$s after sleep</string>
    <string name="owner_info_settings_summary" />
    <string name="unlock_set_unlock_mode_none">Slide</string>
    <string name="jrd_lockscreen_select_lock_title">Select screen lock</string>
    <string name="jrd_lockscreen_options_title">Lock options</string>
    <string name="jrd_lockscreen_options_summary">Customize message and components on lock screen</string>
    <string name="jrd_lockscreen_lock_wallpaper_title">Change lock wallpaper</string>
    <string name="jrd_lockscreen_owner_info_title">Owner information</string>
    <string name="bluetooth_dock_settings_a2dp">For music and media</string>
    <string name="wifi_display_settings_title">TV Link</string>
    <string name="wifi_settings">Wi-Fi</string>
    <string name="sound_settings">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="musicfx_title">Music effects</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="notification_sound_dialog_title">Choose notification ringtone</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Audible selection</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Haptic feedback</string>
    <string name="volume_media_description">Music, video, games and other media</string>
    <string name="volume_ring_description">Ringtone, notifications, system</string>
    <string name="volume_notification_description">Notifications</string>
    <string name="volume_system_description">System</string>
    <string name="volume_alarm_description">Alarms</string>
    <string name="dock_settings">Dock</string>
    <string name="dock_audio_settings_title">Audio</string>
    <string name="dock_sounds_enable_title">Dock insertion sound</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="screensaver_settings_title">Screen saver</string>
    <string name="title_font_size">Font size</string>
    <string name="system_update_settings_list_item_title">System updates</string>
    <string name="system_update_settings_list_item_summary" />
    <string name="firmware_version">Firmware version</string>
    <string name="model_number">Model number</string>
    <string name="fcc_equipment_id">Equipment ID</string>
    <string name="baseband_version">Baseband version</string>
    <string name="kernel_version">Kernel version</string>
    <string name="build_number">Build number</string>
    <string name="selinux_status">SELinux status</string>
    <string name="device_status">Status</string>
    <string name="device_status_summary">Phone number, signal, etc.</string>
    <string name="storage_settings">Storage</string>
    <string name="about_settings">About phone</string>
    <string name="legal_information">Legal information</string>
    <string name="regulatory_information">Regulatory information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="settings_safetylegal_title">Safety information</string>
    <string name="lockpattern_settings_enable_visible_pattern_title">Use visible pattern</string>
    <string name="lockpattern_settings_enable_power_button_instantly_locks">Power button instantly locks</string>
    <string name="development_settings_title">Developer options</string>
    <string name="usage_type_gps">GPS</string>
    <string name="sound_category_system_title">System</string>
    <string name="data_usage_menu_auto_sync">Auto-sync data</string>
    <string name="selinux_status_enforcing">Enforcing</string>
    <string name="switch_on_title">Power on ringtone</string>
    <string name="switch_off_title">Shut down ringtone</string>
    <string name="dtmf_tone_enable_summary">Play tones when dial pad is pressed</string>
    <string name="title_powersave">Battery management</string>
    <string name="sound_effects_enable_summary">Play sound when screen is selected</string>
    <string name="lock_sounds_enable_summary">Play sound when locking and unlocking screen</string>
    <string name="haptic_feedback_enable_summary">Vibrate when soft keys are pressed and on certain UI interactions</string>
    <string name="silent_mode_title">Silent mode</string>
    <string name="sound_and_notifacation_category_calls_title">Ringtone &amp; notifications</string>
    <string name="sound_category_volume_title">Volume</string>
    <string name="sound_notifaction_title">Notification sound</string>
    <string name="ascending_ringing">Crescendo ringtone</string>
    <string name="vibrate_when_ting_title">Vibrate</string>
    <string name="gestures_call_settings_title">Incoming calls</string>
    <string name="gestures_alarm_settings_title">Alarm</string>
    <string name="gestures_music_settings_title">Music player</string>
    <string name="gestures_alarm_settings_preference">Turn over to activate</string>
    <string name="gestures_call_settings_preference">Turn over to mute</string>
    <string name="gestures_call_settings_summary">Mute incoming calls by turning the phone over</string>
    <string name="gestures_music_settings_preference">Shake to switch music</string>
    <string name="gestures_music_settings_summary">Shake to switch to the next song when your phone is unlocked</string>
    <string name="quick_boot_settings_title">Quick start</string>
    <string name="quick_boot_settings_summary">Activation recommended to shorten boot time.</string>
    <string name="jrd_sdcard_system_update_new">System updates (storage)</string>
    <string name="voice_broadcast">Voice broadcast</string>
    <string name="message_voice_broadcast_title">Message voice broadcast</string>
    <string name="call_voice_broadcast_title">Call voice broadcast</string>
    <string name="email_voice_broadcast_title">Email voice broadcast</string>
    <string name="message_voice_broadcast_category_title">Incoming message voice broadcast</string>
    <string name="call_voice_broadcast_category_title">Incoming call voice broadcast</string>
    <string name="email_voice_broadcast_category_title">Incoming Email voice broadcast</string>
    <string name="message_voice_broadcast_always_ask_title">Always ask</string>
    <string name="message_voice_broadcast_always_ask_summary">Please say \"bo bao xin xi\" to broadcast SMS content</string>
    <string name="turn_over_to_mute_voice_broadcast">Turn over to mute</string>
    <string name="powersaver_dataconnection">Block data connection</string>
    <string name="powersaver_dataconnection_summary">Deactivate data connection when the screen backlight is off</string>
    <string name="powersaver_whitelist_label">White list for backlight off</string>
    <string name="powersaver_whitelist_summary">Some apps notifications will be blocked if you selected</string>
    <string name="title_font_style">Fonts style</string>
    <string name="hifi_switch_title">Hi-Fi</string>
    <string name="hifi_switch_summary">You could get high fidelity hearing experience right now when Hi-Fi is switched on.</string>
    <string name="about_hifi_title">"What's Hi-Fi?"</string>
    <string name="about_hifi_msg">Hi-Fi is the abbreviation of High-Fidelity. It is defined as the ability to reflect the original sound signal for sound system or equipment, and the realistic degree of sound location and its movement when some special decorating, processing and reflecting of the sound field are done to sound signal.</string>
    <string name="hifi_mode_title">"What's Hi-Fi mode?"</string>
    <string name="hifi_mode_msg">Hi-Fi mode is a kind of playing mode based on the special audio chipset, which could promote the music quality to lossess level in real time.</string>
    <string name="hifi_more_title">Learn more</string>
    <string name="hifi_more_msg">As for sound quality, usually music with high quality, such as with APE, FLAC and WAV extension name or in 320kps or higher bitrate, will bring a better listening experience when you switch Hi-Fi on. Also you should be noted that for Hi-Fi is dealed with by inner audio chipset, turning of Hi-Fi will cause more battery consumption.</string>
    <string name="hifi_on_title">How to switch Hi-Fi on?</string>
    <string name="hifi_on_msg">When headset jack is connected with any audio peripherals, such as headset or speaker, then follow \"Setting\" -> \"Sound\" -> \"Hi-Fi\" steps to switch Hi-Fi on. You may enjoy the original sound effect right now.</string>
    <string name="button_led_title">Button LED</string>
    <string name="button_led_summary">Turn on the button LED when touching the screen</string>
    <string name="screen_off_effect">Screen off effect</string>
    <string name="multi_settings_title">Color temperature adjusting</string>
</resources>