<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/display_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.jrdsettings">
    <PreferenceCategory android:persistent="false" android:title="@string/display_personalize" android:key="display_personalize">
        <CheckBoxPreference android:title="@string/clear_motion_title" android:key="clearMotion" android:summary="@string/clear_motion_summary" />
        <PreferenceScreen android:title="@string/lock_screen_style_title" android:key="lock_screen_style">
            <intent android:targetPackage="com.android.jrdsettings" android:targetClass="com.mediatek.lockscreensettings.LockScreenStyleSettings" />
        </PreferenceScreen>
        <com.android.jrdsettings.MultiLineCheckBoxPreference android:title="@string/lock_screen_notifications_title" android:key="lock_screen_notifications" android:summary="@string/lock_screen_notifications_summary" />
        <CheckBoxPreference android:title="@string/button_led_title" android:key="button_led" android:summary="@string/button_led_summary" />
        <PreferenceScreen android:title="@string/display_settings_scences_title" android:key="scenes">
            <intent android:targetPackage="com.android.launcher" android:targetClass="com.android.launcher2.SceneChooser" />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/mtk_thememanager_title" android:key="color" android:fragment="com.mediatek.thememanager.ThemeManager" />
        <PreferenceScreen android:title="@string/wallpaper_settings_title" android:key="wallpaper" android:fragment="com.android.jrdsettings.WallpaperTypeSettings" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/display_default" android:key="display_default">
        <CheckBoxPreference android:title="@string/accelerometer_title" android:key="accelerometer" />
        <com.android.jrdsettings.JrdBrightnessPreference android:title="@string/brightness" android:key="brightness" />
        <com.android.jrdsettings.PictureQualityToolPreference android:persistent="true" android:title="@string/multi_settings_title" android:key="multi" android:defaultValue="0" />
        <PreferenceScreen android:title="@string/screensaver_settings_title" android:key="screensaver" android:fragment="com.android.jrdsettings.DreamSettings" />
        <PreferenceScreen android:title="@string/title_font_style" android:key="font_style">
            <intent android:targetPackage="com.jrdcom.fontmanager" android:targetClass="com.jrdcom.fontmanager.FontManagerActivity" />
        </PreferenceScreen>
        <com.android.jrdsettings.JrdFontSizePreference android:title="@string/title_font_size" android:entryValues="@array/entryvalues_font_size" />
        <PreferenceScreen android:title="@string/hdmi_settings" android:key="hdmi_settings" android:summary="@string/hdmi_settings_summary" android:fragment="com.mediatek.hdmi.HDMISettings" />
        <ListPreference android:persistent="false" android:title="@string/landscape_launcher_title" android:key="landscape_launcher" />
        <CheckBoxPreference android:persistent="false" android:title="@string/notification_pulse_title" android:key="notification_pulse" />
        <ListPreference android:persistent="false" android:entries="@array/screen_timeout_entries" android:title="@string/screen_timeout" android:key="screen_timeout" android:summary="@string/screen_timeout_summary" android:entryValues="@array/screen_timeout_values" />
        <ListPreference android:persistent="false" android:entries="@array/screen_off_entries" android:title="@string/screen_off_effect" android:key="screen_off" android:entryValues="@array/screen_off_values" />
        <PreferenceScreen android:title="@string/wifi_display_settings_title" android:key="wifi_display" android:fragment="com.android.jrdsettings.wfd.WifiDisplaySettings" />
    </PreferenceCategory>
</PreferenceScreen>